Link UI to game logic and create dynamic scoreboard

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <div class="scoreboard">
+        <p>HUMAN: <span id="human-score"></span></p>
+        <p>COMPUTER: <span id="computer-score"></span></p>
+    </div>
 </body>
 <script src="gamescripts.js"></script>
 </html>
